--- a/.gitignore
+++ b/.gitignore
@@ -472,3 +472,5 @@ Tutorials/Willman J.M. - Beginning PyQt - 2020.pdf
 Tutorials/Python for Computer Vision with OpenCV and Deep Learning/[FreeCoursesOnline.Me].url
 Tutorials/Python for Computer Vision with OpenCV and Deep Learning/[FreeTutorials.Eu].url
 Tutorials/Python for Computer Vision with OpenCV and Deep Learning/[FTU Forum].url
+Projects/Realtime Finger Counter/
+PDFtoOCR/
