--- a/.gitignore
+++ b/.gitignore
@@ -474,3 +474,13 @@ Tutorials/Python for Computer Vision with OpenCV and Deep Learning/[FreeTutorial
 Tutorials/Python for Computer Vision with OpenCV and Deep Learning/[FTU Forum].url
 Projects/Realtime Finger Counter/
 PDFtoOCR/
+3b1b/videos/
+Games/
+Projects/Face-recognition-using-OpenCV/
+Projects/GUI/
+Projects/openCV/
+Tutorials/Python for Computer Vision with OpenCV and Deep Learning/[FreeCoursesOnline.Me].url
+Tutorials/Python for Computer Vision with OpenCV and Deep Learning/[FreeTutorials.Eu].url
+Tutorials/Python for Computer Vision with OpenCV and Deep Learning/[FTU Forum].url
+youtube-auto-comments/
+*.url
